fix gap in posts

--- a/src/entities/ShortPost.css
+++ b/src/entities/ShortPost.css
@@ -10,7 +10,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: rgb(83, 91, 242, 0.08);
-    gap: 30px;
+    gap: 5px;
     height: 350px;
 }
 
